--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,19 @@
   "manifest_version": 2,
   "name": "Registration Helper",
   "version": "1.0",
-  "description": "This is a course registration helper for UI students.",
+  "description": "This is a course registration helper for UI students. (Icon credit to: https://www.flaticon.com/free-icon/books-stack-of-three_29302)",
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/books-stack-of-three16.png",
+    "32": "images/books-stack-of-three32.png",
+    "48": "images/books-stack-of-three48.png",
+    "128": "images/books-stack-of-three128.png"
   },
   "browser_action": {
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/books-stack-of-three16.png",
+      "32": "images/books-stack-of-three32.png",
+      "48": "images/books-stack-of-three48.png",
+      "128": "images/books-stack-of-three128.png"
     },
     "default_popup": "popup.html"
   },
